added a theme, updated translations

--- a/docs/translations/cs/cs.json
+++ b/docs/translations/cs/cs.json
@@ -260,14 +260,26 @@
   "detClonedName": "Kopírovat",
   "detAutoType": "Automaticky vyplnit",
   "detAutoTypeSettings": "Nastavit automatické vyplnění",
+  "detAutoTypeEnabled": "Zapnout automatické vyplňování pro tuto položku",
+  "detAutoTypeShortcutsDesc": "{} nebo {}, zatímco je apka neaktivní",
   "detAutoTypeWindow": "Okno",
   "detAutoTypeInputWindow": "Název okna",
+  "detSetupOtpAlert": "Naskenujte QR kód ",
+  "detSetupOtpAlertBody": "Prosím nakopírujte QR kód, který je zobrazen na autorizační stránce.",
+  "detSetupOtpAlertBody1": "1. jděte na autorizační stránku",
+  "detSetupOtpAlertBody2": "2. udělejte snímek QR kódu {}",
+  "detSetupOtpAlertBody3": "3. vložte ho sem {}",
+  "detSetupOtpAlertBody3Mobile": "3. vyberte ho nebo naskenujte kamerou s pomocí tlačítka Vybrat/Naskenovat, které je níže",
+  "detSetupOtpAlertBody4": "Pokud nemůžete kód naskenovat, klikněte na Vložit kód ručně",
+  "detSetupOtpManualButton": "Vložit kód ručně",
+  "detSetupOtpScanButton": "Vybrat/Naskenovat",
   "detSetupOtpAlertBodyWith": "s {}",
   "detOtpImageError": "Chyba při čtení obrázku",
   "detOtpImageReading": "Čte se QR kód...",
   "detOtpQrError": "Chyba při skenování QR kódu",
   "detOtpQrWrong": "Špatný QR kód",
   "autoTypeKeys": "Klíče",
+  "autoTypeLink": "více...",
   "autoTypeErrorNotInstalled": "{} není nainstalován",
   "autoTypeMsgMatchedByWindow": "Vybrat heslo pro {}",
   "appUnsavedWarn": "Neuložili jste změny!",
@@ -284,13 +296,22 @@
   "setGenNewVersion": "Byla vydána a stáhnuta nová verze apky",
   "setGenReleaseNotes": "Shlédnout release notes",
   "setGenDownloadUpdate": "Stáhnout update",
+  "setGenUpdateAuto": "Automaticky stáhnout a nainstalovat",
   "setGenUpdateCheck": "Vyzkoušet, ale neinstalovat",
+  "setGenNoUpdate": "Nikdy neověřovat updaty",
+  "setGenUpdateChecking": "Ověřuji updaty",
+  "setGenCheckUpdate": "Ověřit updaty",
   "setGenErrorChecking": "Chyba při ověřování updatů",
+  "setGenLastCheckSuccess": "Poslední úspěšné ověření proběhlo {}",
   "setGenLastCheckVer": "poslední verze byla {}",
+  "setGenCheckedAt": "Ověřeno",
   "setGenLatestVer": "používáte poslední verzi",
   "setGenNewVer": "nová verze {} je přístupná, vydaná",
   "setGenDownloadingUpdate": "Stahuje se update...",
+  "setGenExtractingUpdate": "Rozbaluji update...",
   "setGenCheckErr": "Při stahování nové verze došlo k chybě",
+  "setGenNeverChecked": "Updaty nebyly nikdy ověřeny",
+  "setGenRestartToUpdate": "Restartovat apku kvůli updatu",
   "setGenDownloadAndRestart": "Stáhnout update a restartovat",
   "setGenAppearance": "Vzhled",
   "setGenTheme": "Téma",
