--- a/docs/translations/no/no.json
+++ b/docs/translations/no/no.json
@@ -46,19 +46,19 @@
     "Lør"
   ],
   "retToApp": "tilbake til appen",
-  "name": "Navn",
-  "icon": "Ikon",
-  "title": "Tittel",
-  "password": "Passord",
-  "user": "Bruker",
-  "website": "Nettside",
-  "tags": "Etikett",
-  "notes": "Notater",
+  "name": "navn",
+  "icon": "ikon",
+  "title": "tittel",
+  "password": "passord",
+  "user": "bruker",
+  "website": "nettside",
+  "tags": "etiketter",
+  "notes": "notater",
   "entry": "oppføring",
-  "group": "Gruppe",
-  "noTitle": "Ingen tittel",
-  "or": "Eller",
-  "history": "Historie",
+  "group": "gruppe",
+  "noTitle": "uten tittel",
+  "or": "eller",
+  "history": "historikk",
   "template": "mal",
   "notImplemented": "Ikke implementert",
   "saveChanges": "Lagre endringer",
@@ -68,8 +68,8 @@
   "help": "Hjelp",
   "settings": "Innstillinger",
   "plugins": "Utvidelser",
-  "cache": "Hurtiglager",
-  "file": "Fil",
+  "cache": "hurtiglager",
+  "file": "fil",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -84,50 +84,50 @@
   "menuEmptyTrash": "Tøm papirkurv",
   "menuEmptyTrashAlert": "Tøm papirkurv?",
   "menuEmptyTrashAlertBody": "Du vil ikke kunne legge tilbake elementer",
-  "menuItemCollapsed": "Dobbelklikk for å utvide",
+  "menuItemCollapsed": "Dobbeltklikk for å utvide",
   "alertYes": "Ja",
   "alertNo": "Nei",
-  "alertOk": "Ok",
+  "alertOk": "OK",
   "alertCancel": "Avbryt",
   "alertSignIn": "Logg inn",
   "alertCopy": "Kopier",
   "alertClose": "Lukk",
-  "appBeta": "ADVARSEL: Testversjon, kun for utvikling",
-  "footerOpen": "Åpne/vise",
+  "appBeta": "ADVARSEL: betaversjon, kun forhåndsvisning",
+  "footerOpen": "Åpne / Ny",
   "footerSyncError": "Synkroniseringsfeil",
   "footerTitleGen": "Generer",
   "footerTitleLock": "Lås",
   "genLen": "Lengde",
   "genNewPass": "Nytt passord",
-  "genPresetDefault": "Standardoppsett",
-  "genPresetDerived": "Som tidligere passord",
-  "genPresetPronounceable": "Uttalbart",
-  "genPresetMed": "Medium lengde",
-  "genPresetLong": "Langt",
-  "genPresetPin4": "Firesifret PIN",
+  "genPresetDefault": "standard innstilling",
+  "genPresetDerived": "som tidligere passord",
+  "genPresetPronounceable": "mulig å uttale",
+  "genPresetMed": "medium lengde",
+  "genPresetLong": "langt",
+  "genPresetPin4": "firesifret PIN",
   "genPresetMac": "MAC-adresse",
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
   "grpTitle": "Gruppe",
   "grpSearch": "Aktiver søk i oppføringer i denne gruppen",
   "grpAutoType": "Aktiver autoinnfylling",
-  "grpAutoTypeSeq": "Autoinnfyllings-sekvens",
-  "grpAutoTypeSeqDefault": "Bruk standard autoinnfylling-sekvens.",
+  "grpAutoTypeSeq": "Autoinnfyllingssekvens",
+  "grpAutoTypeSeqDefault": "Bruk standard autoinnfyllingssekvens.",
   "grpTrash": "Slett gruppe med alle oppføringer",
   "tagTitle": "Etikett",
   "tagTrash": "Fjern etiketter fra alle oppføringer",
   "tagRename": "Endre navn",
-  "tagTrashQuestion": "Fjern etikett fra alle oppføringer?",
+  "tagTrashQuestion": "Fjerne etikett fra alle oppføringer?",
   "tagTrashQuestionBody": "Denne etiketten vil bli fjernet fra alle oppføringer. Det finnes ingen enkel måte å endre det tilbake på.",
-  "tagExists": "Etikett eksisterer allerede",
-  "tagExistsBody": "Etikett med dette navnet finnes allerede. Vennligst velg et annet navn.",
+  "tagExists": "Etiketten eksisterer allerede",
+  "tagExistsBody": "En etikett med dette navnet finnes allerede. Vennligst velg et annet navn.",
   "tagBadName": "Ugyldig navn",
   "tagBadNameBody": "Etikettnavnet kan ikke inneholde tegnene {}. Vennligst fjern disse.",
-  "genPsTitle": "Generator-forvalg",
-  "genPsCreate": "Nytt forvalg",
-  "genPsDelete": "Slett forvalg",
-  "genPsNew": "forvalg",
-  "genPsEnabled": "Vis i forvalgsliste",
+  "genPsTitle": "Generatorinnstillinger",
+  "genPsCreate": "Nytt innstilling",
+  "genPsDelete": "Slett innstilling",
+  "genPsNew": "innstilling",
+  "genPsEnabled": "Vis i innstillingsliste",
   "genPsDefault": "Valgt som standard",
   "genPsDefaultLength": "Standard lengde",
   "genPsUpper": "Store bokstaver",
@@ -140,18 +140,18 @@
   "genPsInclude": "Tilleggsymboler som skal inkluderes",
   "genPsExample": "Eksempel på generert passord",
   "keyChangeTitleRemote": "Hovednøkkel endret",
-  "keyChangeMessageRemote": "Hovedpassord er endret for denne databasen. Vennligst skriv inn nytt hovedpassord.",
-  "keyChangeTitleExpired": "Hovedpassord har utløpt",
-  "keyChangeMessageExpired": "Hovedpassord for denne databasen har utløpt. Vennligst skriv inn nytt passord.",
+  "keyChangeMessageRemote": "Hovednøkkelen er endret for denne databasen. Vennligst skriv inn ny en hovednøkkel",
+  "keyChangeTitleExpired": "Hovednøkkelen har utløpt",
+  "keyChangeMessageExpired": "Hovednøkkelen for denne databasen har utløpt. Vennligst skriv inn ny nøkkel",
   "keyChangeRepeatPassword": "Passord, en gang til",
   "iconFavTitle": "Last ned og bruk nettstedsikon",
   "iconSelCustom": "Velg eget ikon",
   "listEmptyTitle": "Tom",
-  "listEmptyAdd": "legg til med {} knappen over",
+  "listEmptyAdd": "legg til med {}-knappen over",
   "listGroup": "Gruppe",
-  "listNoWebsite": "Ingen nettside",
-  "listNoUser": "Ingen bruker",
-  "listNoAttachments": "Ingen vedlegg",
+  "listNoWebsite": "ingen nettside",
+  "listNoUser": "ingen bruker",
+  "listNoAttachments": "ingen vedlegg",
   "listAddTemplateHeader": "Maler",
   "listAddTemplateBody1": "Maler lar deg lage oppføringer med ett klikk. Legg til noe i oppføringsmalen, og klikk {} en gang til for å bruke denne malen",
   "listAddTemplateBody2": "Du kan alltid finne malene dine i {}-gruppen",
