--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -201,7 +201,7 @@
   "openUrl": "URL",
   "openUrlDesc": "https://server/path/file.kdbx, или просто file.kdbx",
   "openUser": "Логин",
-  "openUserDesc": "Пользователь сервера WebDAV (если требуется)",
+  "openUserDesc": "Пользователь WebDAV сервера (если требуется)",
   "openUserPlaceholder": "нет логина",
   "openPass": "Пароль",
   "openPassDesc": "Пароль сервера WebDAV  (это не пароль к вашему файлу)",
@@ -501,7 +501,7 @@
   "setAboutTitle": "О",
   "setAboutBuilt": "KeeWeb создан при помощи этих потрясающих инструментов",
   "setAboutLic": "Лицензия",
-  "setAboutLicComment": "Само приложение и все входящие в него компоненты, которые не находятся в открытом доступе, лицензируются по лицензии MIT",
+  "setAboutLicComment": "Это приложение и все входящие в него компоненты, за исключением имеющих открытый исходный код, лицензируются по лицензии MIT",
   "setAboutFirst": "Это приложение с открытым исходным кодом созданное {}",
   "setAboutSecond": "под лицензией {}.",
   "setAboutSource": "Исходный код и обсуждение на {}.",
@@ -520,7 +520,7 @@
   "setHelpTwitter": "Twitter",
   "dropboxLogin": "Вход в Dropbox",
   "dropboxLoginBody": "Чтобы продолжить, вы должны войти в Dropbox.",
-  "dropboxSyncError": "Dropbox Sync Error",
+  "dropboxSyncError": "Ошибка синхронизации Dropbox",
   "dropboxNotFoundBody": "Файл не найден. Проверьте, не был ли он был удален с другого компьютера?",
   "dropboxFull": "Dropbox заполнен",
   "dropboxFullBody": "Ваш Dropbox заполнен, свободного места нет.",
