--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -59,6 +59,7 @@
   "noTitle": "nincs cím",
   "or": "vagy",
   "history": "előzmény",
+  "template": "sablon",
   "notImplemented": "Nincs megvalósítva",
   "saveChanges": "Módosítások mentése",
   "discardChanges": "Módosítások elvetése",
@@ -66,6 +67,7 @@
   "shortcuts": "Gyorsbillentyűk",
   "help": "Súgó",
   "settings": "Beállítások",
+  "plugins": "Beépülők",
   "cache": "gyorsítótár",
   "file": "fájl",
   "webdav": "WebDAV",
@@ -150,6 +152,7 @@
   "listNoWebsite": "új weboldal",
   "listNoUser": "nincs felhasználónév",
   "listNoAttachments": "nincsenek csatolmányok",
+  "listAddTemplateHeader": "Sablonok",
   "searchAddNew": "Új hozzáadása",
   "searchSort": "Rendezés",
   "searchCreated": "Létrehozva",
@@ -305,6 +308,7 @@
   "appSaveErrorBodyMul": "Fájlok automatikus mentése sikertelen:",
   "appSettingsError": "Hiba az alkalmazás betöltése során",
   "appSettingsErrorBody": "Hiba történt az alkalmazás beállításainak betöltése közben. Kérem ellenőrizze az alkalmazás URL-jét, vagy vegye fel a kapcsolatot a rendszergazdával.",
+  "appNotSupportedError": "Nem támogatott a böngészője.",
   "appTabWarn": "Túl sok lap",
   "appTabWarnBody": "A KeeWebet nem lehet egyszerre két böngészőlapon használni, kérem zárja ezt be.",
   "setGenTitle": "Általános beállítások",
@@ -341,10 +345,14 @@
   "setGenThemeSd": "Beégetett sötét",
   "setGenThemeSl": "Beégetett világos",
   "setGenLocale": "Nyelv",
+  "setGenLocOther": "további nyelvek beépülőként érhetők el",
   "setGenFontSize": "Betűméret",
   "setGenFontSizeNormal": "Normál",
   "setGenFontSizeLarge": "Nagy",
   "setGenFontSizeLargest": "Legnagyobb",
+  "setGenTitlebarStyle": "Ablakstílus (újraindítás szükséges)",
+  "setGenTitlebarStyleDefault": "Alapértelmezett",
+  "setGenTitlebarStyleHidden": "Egyedi cím",
   "setGenShowSubgroups": "Minden alcsoport bejegyzéseinek megjelenítése",
   "setGenTableView": "Bejegyzések listája táblázatban",
   "setGenColorfulIcons": "Színes egyedi ikonok a listában",
@@ -455,6 +463,21 @@
   "setShCopyUrlGlobal": "weboldal másolása (amikor az alkalmazás háttérben van)",
   "setShAutoTypeGlobal": "automatikus gépelés (amikor az alkalmazás háttérben van)",
   "setShLock": "adatbázis zárolása",
+  "setPlInstallTitle": "Új beépülők telepítése",
+  "setPlInstallLabel": "Beépülő URL",
+  "setPlInstallBtn": "Telepítés",
+  "setPlInstallBtnProgress": "Telepítés...",
+  "setPlUninstallBtn": "Eltávolítás",
+  "setPlDisableBtn": "Letiltás",
+  "setPlEnableBtn": "Engedélyezés",
+  "setPlUpdateBtn": "Frissítés",
+  "setPlJs": "kód",
+  "setPlCss": "stílusok",
+  "setPlLoc": "nyelv",
+  "setPlCreatedBy": "Készítette: {}",
+  "setPlOfficial": "Hivatalos KeeWeb beépülő",
+  "setPlSearch": "Beépülők keresése",
+  "setPlAutoUpdate": "Automatikus frissítés",
   "setAboutTitle": "Névjegy",
   "setAboutBuilt": "Ez az alkalmazás ezekkel a fantasztikus eszközökkel készült",
   "setAboutLic": "Licenc",
