--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -82,8 +82,8 @@
   "menuAlertNoTags": "Sem tags",
   "menuAlertNoTagsBody": "Você pode adicionar novas tags durante a edição de campos, na seção Tags.",
   "menuEmptyTrash": "Lixo",
-  "menuEmptyTrashAlert": "Lixo vazio",
-  "menuEmptyTrashAlertBody": "Você não será capaz de colocar itens de volta",
+  "menuEmptyTrashAlert": "Esvaziar o Lixo?",
+  "menuEmptyTrashAlertBody": "Você não será capaz de recuperar os itens",
   "menuItemCollapsed": "Clique duas vezes para expandir",
   "alertYes": "Sim",
   "alertNo": "Não",
@@ -92,37 +92,37 @@
   "alertSignIn": "Entrar",
   "alertCopy": "Cópiar",
   "alertClose": "Fechar",
-  "appBeta": "AVISO: versão beta, apenas para visualização",
+  "appBeta": "AVISO: versão beta, apenas para inspeção",
   "footerOpen": "Abrir / Novo",
   "footerSyncError": "Erro de sincronização",
   "footerTitleGen": "Gerar",
-  "footerTitleLock": "Bloquear",
+  "footerTitleLock": "Travar",
   "genLen": "Comprimento",
   "genNewPass": "Nova senha",
-  "genPresetDefault": "predefinição padrão",
+  "genPresetDefault": "padrão predefinido",
   "genPresetDerived": "Como senha antiga",
   "genPresetPronounceable": "pronunciável",
-  "genPresetMed": "comprimento médio",
+  "genPresetMed": "médio",
   "genPresetLong": "longo",
   "genPresetPin4": "PIN de 4 dígitos",
   "genPresetMac": "Endereço MAC",
-  "genPresetHash128": "128-bit hash",
+  "genPresetHash128": "hash de 128-bit",
   "genPresetHash256": "hash de 256 bits",
   "grpTitle": "Grupo",
   "grpSearch": "Ativar entradas de pesquisa neste grupo",
-  "grpAutoType": "Ativar auto-tipo",
-  "grpAutoTypeSeq": "Sequência de tipo automático",
-  "grpAutoTypeSeqDefault": "Usar sequência de tipo automático padrão",
+  "grpAutoType": "Ativar auto-teclar",
+  "grpAutoTypeSeq": "Sequência de auto-teclar",
+  "grpAutoTypeSeqDefault": "Usar sequência de auto-teclar padrão",
   "grpTrash": "Excluir grupo com todas as entradas",
-  "tagTitle": "Tag",
-  "tagTrash": "Remover tag de todas as entradas",
+  "tagTitle": "Etiqueta",
+  "tagTrash": "Remover a etiqueta de todas as entradas",
   "tagRename": "Renomear",
-  "tagTrashQuestion": "Remover tag de todas as entradas?",
-  "tagTrashQuestionBody": "Essa tag será removida de todas as entradas. Não haverá uma maneira fácil de colocá-lo de volta.",
-  "tagExists": "Tag já existe",
+  "tagTrashQuestion": "Remover a etiqueta de todas as entradas?",
+  "tagTrashQuestionBody": "Essa etiqueta será removida de todas as entradas. Não há uma maneira fácil de a colocar de volta.",
+  "tagExists": "Etiqueta já existe",
   "tagExistsBody": "Tag com esse nome já existe. Por favor, escolha outro nome.",
   "tagBadName": "Nome ruim",
-  "tagBadNameBody": "Nome da marca não pode conter caracteres {}. Por favor, remova-os.",
+  "tagBadNameBody": "Nome da etiqueta não pode conter caracteres {}. Por favor, remova-os.",
   "genPsTitle": "Predefinições do gerador",
   "genPsCreate": "Nova predefinição",
   "genPsDelete": "Excluir predefinição",
@@ -134,7 +134,7 @@
   "genPsLower": "Letras latinas minúsculas",
   "genPsDigits": "Dígitos",
   "genPsSpecial": "Símbolos especiais",
-  "genPsBrackets": "Suportes",
+  "genPsBrackets": "Colchetes",
   "genPsHigh": "Caracteres ASCII altos",
   "genPsAmbiguous": "Símbolos ambíguos",
   "genPsInclude": "Símbolos adicionais para incluir",
@@ -153,8 +153,8 @@
   "listNoUser": "Sem usuário",
   "listNoAttachments": "sem anexos",
   "listAddTemplateHeader": "Modelos",
-  "listAddTemplateBody1": "Os modelos permitem que você crie entradas com um clique. Adicione algo à entrada do modelo e clique em {} novamente para usar este modelo.",
-  "listAddTemplateBody2": "Você pode sempre encontrar seus modelos no grupo {}.",
+  "listAddTemplateBody1": "Os modelos permitem que você crie entradas com um clique. Adicione algo ao modelo de entrada e clique em {} novamente para usar este modelo.",
+  "listAddTemplateBody2": "Você sempre encontrará seus modelos no grupo {}.",
   "searchAddNew": "Adicionar novo",
   "searchSort": "Ordenar",
   "searchCreated": "Criado",
@@ -170,16 +170,16 @@
   "searchOther": "Outros campos",
   "searchProtect": "Campos seguros",
   "searchOptions": "Opções",
-  "searchCase": "Caso de compatibilidade",
+  "searchCase": "Compatibilizar maiúsculas/minúsculas",
   "searchRegex": "RegEx",
   "openOpen": "Abrir",
   "openNew": "Novo",
   "openMore": "Mais",
   "openDemo": "Demonstração",
   "openXml": "Importar XML",
-  "openCaps": "Caps Lock está ativado",
+  "openCaps": "Maiúsculas estão ativadas",
   "openClickToOpen": "Clique para abrir um arquivo",
-  "openKeyFile": "arquivo de chave",
+  "openKeyFile": "arquivo chave",
   "openKeyFileDropbox": "(do Dropbox)",
   "openDropHere": "Solte arquivos aqui",
   "openFailedRead": "Falha ao ler o arquivo",
@@ -192,11 +192,11 @@
   "openRemoveLastQuestionBody": "O arquivo que você está excluindo é armazenado apenas dentro do aplicativo. Excluí-lo permanentemente?",
   "openRemoveLastQuestionModBody": "O arquivo que você está excluindo tem modificações locais. Excluí-lo e descartar essas modificações?",
   "openLocalFile": "Arquivo local",
-  "openLocalFileBody": "Você vai abrir um arquivo que será armazenado dentro do aplicativo. As alterações feitas não serão salvas de volta no sistema de arquivos. Para obter o arquivo com seus dados, exporte-o das configurações.",
+  "openLocalFileBody": "Você vai abrir um arquivo que será armazenado dentro do aplicativo. As alterações feitas não serão salvas de volta no sistema de arquivos. Para obter o arquivo com seus dados, exporte-o nas configurações.",
   "openLocalFileDontShow": "Não mostrar isto novamente",
   "openWrongFile": "Arquivo incorreto",
-  "openWrongFileBody": "Este formato de ficheiro não é suportado. Este aplicativo funciona com arquivos de formato de banco de dados KeePass (kdbx).",
-  "openKdbFileBody": "Você está abrindo um arquivo de formato de versão antigo (KDB). Este aplicativo suporta somente o novo formato (kdbx), use o KeePass v2 para converter entre eles.",
+  "openWrongFileBody": "Este formato de arquivo não é suportado. Este aplicativo funciona com arquivos de formato de banco de dados KeePass (kdbx).",
+  "openKdbFileBody": "Você está abrindo um arquivo no formato de versão antigo (KDB). Este aplicativo suporta somente o novo formato (kdbx), use o KeePass v2 para converter entre eles.",
   "openConfigHeader": "{} Configurações",
   "openUrl": "URL",
   "openUrlDesc": "https: //server/path/file.kdbx, ou apenas arquivo.kdbx",
@@ -215,7 +215,7 @@
   "detAttDelToRemove": "Excluir para remover",
   "detEmpty": "Suas senhas serão exibidas aqui",
   "detGroupRestore": "Para restaurar este grupo, arraste-o para qualquer grupo fora do lixo",
-  "detHistoryClickPoint": "Clique no cronograma do histórico de entrada para ver o estado",
+  "detHistoryClickPoint": "Clique na linha de tempo do histórico de entrada para ver o estado",
   "detHistoryReturn": "retornar à entrada",
   "detHistoryRevert": "Reverter para o estado",
   "detHistoryDel": "Excluir estado",
@@ -234,7 +234,7 @@
   "detDropAttachments": "Solte anexos aqui",
   "detDelEntry": "Excluir",
   "detDelEntryPerm": "Excluir permanentemente",
-  "detExpires": "Expirar",
+  "detExpires": "Expira em",
   "detExpired": "expirado",
   "detGroup": "Grupo",
   "detCreated": "Criado",
@@ -242,10 +242,10 @@
   "detNetField": "Novo Campo",
   "detAttachments": "Anexos",
   "detDelFromTrash": "Excluir do lixo?",
-  "detDelFromTrashBody": "Você não será capaz de colocá-lo de volta.",
-  "detDelFromTrashBodyHint": "Para remover rapidamente todos os itens do lixo, clique no ícone vazio no menu Lixeira.",
+  "detDelFromTrashBody": "Você não pode recupera-lo.",
+  "detDelFromTrashBodyHint": "Para remover rapidamente todos os itens do lixo, clique no ícone esvaziar no menu do Lixo.",
   "detFieldCopied": "Copiado",
-  "detFieldCopiedTime": "Copiado durante {} segundos",
+  "detFieldCopiedTime": "Copiado em {} segundos",
   "detCopyHint": "Você pode copiar o valor do campo clicando no título",
   "detMore": "mais",
   "detClickToAddField": "Clique para adicionar um novo campo",
@@ -259,10 +259,11 @@
   "detClone": "Faça uma cópia",
   "detClonedName": "Copiar ",
   "detAutoType": "Auto-tipo",
-  "detAutoTypeSettings": "Configurações de tipo automático",
-  "detAutoTypeEnabled": "Ativar o tipo automático para esta entrada",
+  "detAutoTypeSettings": "Config. de auto-digitação",
+  "detAutoTypeEnabled": "Ativar auto-teclar para esta entrada",
   "detAutoTypeSequence": "Teclas",
   "detAutoTypeInput": "Entrada",
+  "detAutoTypeShortcutsDesc": "{} ou {} enquanto o aplicativo está inativo",
   "detAutoTypeObfuscation": "Misturar teclas reais com aleatório",
   "detAutoTypeWindow": "Janela",
   "detAutoTypeInputWindow": "Título da janela",
@@ -287,11 +288,11 @@
   "autoTypeModifiers": "Modificar teclas",
   "autoTypeKeys": "Chaves",
   "autoTypeLink": "mais...",
-  "autoTypeError": "Erro de tipo automático",
-  "autoTypeErrorGeneric": "Ocorreu um erro ao executar o auto-tipo: {}",
+  "autoTypeError": "Erro de auto-teclar",
+  "autoTypeErrorGeneric": "Ocorreu um erro ao executar auto-teclar: {}",
   "autoTypeErrorGlobal": "Para usar o atalho para todo o sistema, foque o aplicativo onde deseja digitar sua senha",
   "autoTypeErrorNotInstalled": "{} não está instalado",
-  "autoTypeHeader": "Tipo automático: selecione",
+  "autoTypeHeader": "Auto-teclar: selecione",
   "autoTypeMsgNoWindow": "Não foi possível obter o título da janela ativa, comece a digitar para pesquisar",
   "autoTypeMsgMatchedByWindow": "Selecione uma senha para {}",
   "autoTypeNoMatches": "sem combinações",
@@ -309,7 +310,7 @@
   "appSaveErrorBody": "Falha ao salvar automaticamente o arquivo",
   "appSaveErrorBodyMul": "Falha ao salvar automaticamente os arquivos:",
   "appSettingsError": "Erro ao carregar o app",
-  "appSettingsErrorBody": "Ocorreu um erro ao carregar as definições do aplicativo. Verifique o URL do app ou entre em contato com o administrador.",
+  "appSettingsErrorBody": "Ocorreu um erro ao carregar as configurações do aplicativo. Verifique o URL do aplicativo ou entre em contato com seu administrador.",
   "appNotSupportedError": "Seu navegador não é suportado.",
   "appTabWarn": "Muitas guias",
   "appTabWarnBody": "KeeWeb não pode ser usado em duas guias do navegador simultaneamente, por favor, feche esta guia.",
@@ -359,29 +360,153 @@
   "setGenShowSubgroups": "Mostrar entradas de todos os subgrupos",
   "setGenTableView": "Exibir a lista de inscrições",
   "setGenColorfulIcons": "Icones personalizados usam cor na lista",
+  "setGenFunction": "Função",
   "setGenAutoSync": "Salvar e sincronizar automaticamente",
   "setGenRememberKeyFiles": "Lembrar dos arquivos de chaves",
+  "setGenNoRememberKeyFiles": "Não lembrar",
+  "setGenRememberKeyFilesData": "Utilizar armazenamento interno",
+  "setGenRememberKeyFilesPath": "Lembre o caminho para os arquivos de chave",
+  "setGenLockInactive": "Auto-bloquear se o aplicativo ficar inativo",
+  "setGenNoAutoLock": "Não bloquear",
   "setGenLockMinutes": "Em {} minutos",
   "setGenLockHour": "Em 1 hora",
   "setGenLockHours": "Em {} horas",
   "setGenLockDay": "Em 1 dia",
+  "setGenClearClip": "Limpar área de transferência após copiar",
+  "setGenNoClear": "Não limpar",
   "setGenClearSeconds": "Em {} segundos",
   "setGenClearMinute": "Em 1 minuto",
   "setGenMinInstead": "Minimizar aplicativo em vez de fechar",
   "setGenLockMinimize": "Bloquear automaticamente ao minimizar",
   "setGenLockCopy": "Bloquear automaticamente ao copiar uma senha",
-  "setGenLockAutoType": "Bloquear automaticamente quando digitar automaticamente",
+  "setGenLockAutoType": "Auto bloquear ao auto-teclar",
   "setGenStorage": "Armazenamento",
+  "setGenShowAdvanced": "Mostrar configurações avançadas",
   "setGenDevTools": "Mostar ferramenta para desenvolvedores",
+  "setGenTryBeta": "Experimente a versão beta até reiniciar",
+  "setGenTryBetaWarning": "Arquivos não salvos",
+  "setGenTryBetaWarningBody": "Por favor salve todos os arquivos e clique aqui novamente",
+  "setGenShowAppLogs": "Mostrar logs",
+  "setFilePath": "Caminho do arquivo",
+  "setFileStorage": "Este arquivo é carregado de {}.",
+  "setFileIntl": "Esse arquivos está salvo no armazenamento interno",
+  "setFileLocalHint": "Quer trabalhar perfeitamente com arquivos locais?",
+  "setFileDownloadApp": "Baixe o aplicativo desktop",
+  "setFileSave": "Salvar",
+  "setFileSaveTo": "Salvar em ...",
+  "setFileClose": "Fechar",
+  "setFileSync": "Sincronizar",
+  "setFileSaveToXml": "XML",
+  "setFileLastSync": "Última sincronização",
+  "setFileLastSyncUnknown": "desconhecido",
+  "setFileSyncInProgress": "sincronização em progresso",
+  "setFileSyncError": "Erro de sincronização",
   "setFilePass": "Senha",
+  "setFilePassChanged": "a senha foi trocada; deixe o campo em branco para usar a senha antiga",
+  "setFileKeyFile": "Arquivo chave",
+  "setFileSelKeyFile": "Seleciona um arquivo chave",
+  "setFileNames": "Nomes",
+  "setFileDefUser": "Usuário padrão",
   "setFileEnableTrash": "Ativar lixeira",
+  "setFileHistLen": "Quantidade do histórico, mantenha os últimos registros por entrada",
+  "setFileHistSize": "Tamanho do histórico, MB totais por arquivo",
+  "setFileBackups": "Backups",
+  "setFileBackupEnable": "Backup este arquivo",
+  "setFileBackupPath": "Caminho do backup",
+  "setFileBackupTime": "Faça backups",
+  "setFileBackupNow": "Faça backup agora",
+  "setFileBackupNowWorking": "Processando...",
+  "setFileBackupError": "Erro de backup",
+  "setFileBackupErrorDescription": "Erro ao gravar o arquivo de backup",
+  "setFileBackupOnSave": "Toda vez eu salvo este arquivo",
+  "setFileBackupDaily": "Diario",
   "setFileBackupWeekly": "Semanalmente",
   "setFileBackupMonthly": "Mensalmente",
+  "setFileBackupManually": "Manual, sem backups automáticos",
+  "setFileRounds": "Rodadas de encriptação de chave",
+  "setFileKdfParams": "Função de derivação de chave",
+  "setFileKdfParamsIter": "Iterações",
+  "setFileKdfParamsMem": "Memória, KB",
+  "setFileKdfParamsPar": "Paralelismo",
+  "setFileKeyChangeForce": "Solicitar troca de chave depois de (dias)",
+  "setFileUseKeyFile": "Usar arquivo chave",
+  "setFileUseGenKeyFile": "Use o arquivo chave gerado",
+  "setFileUseOldKeyFile": "Usar arquivo chave antigo",
+  "setFileGenKeyFile": "Gera novo arquivo chave",
+  "setFileDontUseKeyFile": "Não usar arquivo chave",
+  "setFileEmptyPass": "Senha vazia",
+  "setFileEmptyPassBody": "Salvar a base de dados com uma senha vazia a deixa completamente desprotegida. Quer realmente fazer isso?",
+  "setFileSaveError": "Erro de salvamento",
+  "setFileSaveErrorBody": "Erro ao salvar este arquivo",
+  "setFileAlreadyExists": "Já existe",
+  "setFileAlreadyExistsBody": "Arquivo {} já existe. Sobrescrever?",
+  "setFileUnsaved": "Mudanças não salvas",
+  "setFileUnsavedBody": "Existem mudanças não salvas para este arquivo",
+  "setFileCloseNoSave": "Fechar e perder mudanças",
+  "setFileDontClose": "Não fechar",
+  "setFileNoWebDavUpload": "Não pode salvar em WebDAV",
+  "setFileNoWebDavUploadBody": "A adição de novos arquivos ao WebDAV não é suportada no momento. Por favor, carregue seu arquivo manualmente e abra o aplicativo.",
+  "setShTitle": "Atalhos",
+  "setShShowAll": "Mostra todos os itens",
+  "setShColors": "Mostra itens com cores",
+  "setShTrash": "Vá para a lixeira",
+  "setShFind": "Pesquisa, ou simplesmente inicie a digitar",
+  "setShClearSearch": "Limpa a pesquisa",
+  "setShCopyPass": "Copia a senha ou o campo selecionado",
+  "setShCopyUser": "copia usuário",
+  "setShCopyUrl": "copia o site",
+  "setShAutoType": "auto-teclar a entrada selecionada",
+  "setShPrev": "vai para o item anterior",
+  "setShNext": "vai para o próximo item",
+  "setShCreateEntry": "Cria entrada",
+  "setShOpen": "abrir / novo",
+  "setShSave": "Salva todos arquivos",
+  "setShGen": "gera senha",
+  "setShSet": "config. do aplicativo",
+  "setShCopyPassGlobal": "copia a senha (com o aplicativo em segundo plano)",
+  "setShCopyUserGlobal": "copia o usuário (com o aplicativo em segundo plano)",
+  "setShCopyUrlGlobal": "copia o site (com o aplicativo em segundo plano)",
+  "setShAutoTypeGlobal": "auto-teclar (com o aplicativo em segundo plano)",
+  "setShLock": "trava a base de dados",
+  "setPlInstallTitle": "Instalar novos plugins",
+  "setPlInstallDesc": "Os plugins adicionam funcionalidades, temas e linguagens ao KeeWeb. Eles rodam com os mesmos privilégios do KeeWeb, podem acessar e gerenciar todas suas senhas. Nunca instale plugins que você não confie.",
+  "setPlInstallLabel": "URL do plugin",
+  "setPlInstallBtn": "Instalar",
+  "setPlInstallBtnProgress": "Instalando",
+  "setPlUninstallBtn": "Desinstalar",
+  "setPlDisableBtn": "Desativar",
+  "setPlEnableBtn": "Habilitar",
+  "setPlUpdateBtn": "Atualizar",
   "setPlLocaleBtn": "Mudar para essa linguagem",
   "setPlThemeBtn": "Mudar para esse tema",
+  "setPlJs": "código",
+  "setPlCss": "estilos",
+  "setPlLoc": "linguagem",
   "setPlCreatedBy": "Criado por {}",
+  "setPlLoadTime": "levou {} para carregar",
+  "setPlLastUpdate": "Última verificação de atualizações",
+  "setPlLoadError": "erro ao carregar o plugin",
+  "setPlGalleryLoading": "Carregando os plugins, espere um pouco",
+  "setPlGalleryLoadError": "Erro ao carregar os plugins",
+  "setPlInstallUrlTitle": "Adicione um plugin de uma URL",
+  "setPlInstallUrlDesc": "Se o plugin não está na galeria, você pode o instalar manualmente por uma URL",
+  "setPlOfficial": "Plugin oficial KeeWeb",
+  "setPlSearch": "busque por plugins",
+  "setPlDevelop": "Quer desenvolver seus próprios plugins?",
+  "setPlDevelopStart": "Inicie aqui",
+  "setPlTranslate": "Ou você pode {}",
+  "setPlTranslateLink": "traduzir o aplicativo para sua linguagem",
   "setPlAutoUpdate": "Atualizar automaticamente",
+  "setPlLoadGallery": "Carregar a galeria de plugins",
   "setAboutTitle": "Sobre",
+  "setAboutBuilt": "Este aplicativo foi criado com essas ferramentas incríveis",
+  "setAboutLic": "Licença",
+  "setAboutLicComment": "O aplicativo em si e todos os componentes incluídos que não estão em domínio público são licenciados sob a licença MIT",
+  "setAboutFirst": "Esta é um aplicativo de código aberto criado por {}",
+  "setAboutSecond": "e licenciado sob {}",
+  "setAboutSource": "O código fonte e issues estão no {}.",
+  "setHelpFormat": "Formato do arquivo",
+  "setHelpFormatBody": "Esta é uma conversão do aplicativo {} feita com tecnologias web. Ela entende arquivos no formato KeePass (kdbx). Você pode criar esses arquivos (bases de dados de senhas) tanto no KeePass, ou neste aplicativo. O formato do arquivo é 100% compatível e deve ser entendido pelos dois aplicativos.",
   "setHelpProblems": "Precisa de ajuda?",
   "setHelpProblems1": "Se algo der errado, por favor {}",
   "setHelpProblems2": "ou {}",
@@ -408,9 +533,10 @@
   "dropboxAppKey": "Chave do aplicativo Dropbox",
   "dropboxAppKeyDesc": "Copie a chave do seu aplicativo Dropbox (Configurações do desenvolvedor)",
   "dropboxFolder": "Pasta da aplicação",
-  "dropboxFolderDesc": "Se o seu aplicativo estiver vinculado a Dropbox inteiro (não a pasta do aplicativo), defina a pasta com seus arquivos kdbx aqui",
+  "dropboxFolderDesc": "Se o seu aplicativo estiver vinculado ao Dropbox inteiro (não a pasta do aplicativo), defina a pasta com seus arquivos kdbx aqui",
   "dropboxFolderSettingsDesc": "Selecione qualquer pasta no seu Dropbox onde os arquivos serão armazenados (pasta raiz por padrão)",
   "dropboxFolderPlaceholder": "pasta padrão",
+  "dropboxLink": "Vincule o aplicativo a",
   "dropboxLinkApp": "Pasta de aplicativo (Apps/KeeWeb)",
   "dropboxLinkFull": "Dropbox completo ou qualquer pasta",
   "dropboxLinkCustom": "Aplicativo Dropbox próprio",
