--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -42,8 +42,7 @@
   "pt-BR": {
     "name": "Português (Brasil)",
     "nameEn": "Portuguese (Brazil)",
-    "count": 506,
-    "version": "1.2.0"
+    "count": 506
   },
   "no": {
     "name": "Norsk",
